--- a/exercises/templates/add.html
+++ b/exercises/templates/add.html
@@ -7,7 +7,11 @@
 <body>
     <h1>Add a Student</h1>
     <form method="post">
-        <input type="text" name="CHANGE_ME" placeholder="CHANGE ME">
+        <input type="text" name="student_name" placeholder="Student Name">
+        <br>
+        <br>
+        <input type="text" name="student_year" placeholder="Student Year">
+        <br>
         <br>
         <input type="submit" value="Submit">
     </form>
